# app/controllers/auth.controller.go
@@ -4,33 +4,44 @@ import (
 	"fiber-go/app/models"
 	"fiber-go/app/repositories"
 	"fiber-go/lib"
+	"fiber-go/response"
 
 	"github.com/gofiber/fiber/v2"
 	"github.com/golang-jwt/jwt/v5"
 )
 
+// Login godoc
+// @Summary      Login User
+// @Description  Login bro
+// @Tags         Login
+// @Accept       json
+// @Produce      json
+// @Param data body models.Credentials true "The input todo struct"
+// @Success      200  {object}  models.DataResponseOk
+// @Failure      400  {object}  models.ResponseStatus
+// @Failure      404  {object}  models.ResponseStatus
+// @Failure      500  {object}  models.ResponseStatus
+// @Router       /login [post]
 func Login(c *fiber.Ctx) error {
 	user := models.User{}
 	c.BodyParser(&user)
 
 	data, err := repositories.Login(user)
 	if err != nil {
-		return c.JSON(fiber.StatusInternalServerError, err.Error())
-	}
-
-	password := lib.CheckPasswordHash(user.Password, data.Password)
-
-	if !password {
-		return c.JSON(fiber.StatusUnauthorized)
-	}
-
-	// Generate encoded token and send it as response.
-	t, err := lib.GenerateToken(data.Name, data.ID)
-	if err != nil {
 		return c.SendStatus(fiber.StatusInternalServerError)
 	}
 
-	return c.JSON(fiber.Map{"token": t})
+	password := lib.CheckPasswordHash(user.Password, data.Password)
+	if !password {
+		return response.ResponseUnauthorized(c)
+	}
+
+	t, err := lib.GenerateToken(data.Name, data.ID)
+	if err != nil {
+		return response.ResponseInternalServerError(c)
+	}
+
+	return response.ResponseOk(c, fiber.Map{"username": data.Username, "token": t})
 }
 
 func accessible(c *fiber.Ctx) error {
