# docs/swagger.yaml
@@ -22,6 +22,13 @@ definitions:
       username:
         type: string
     type: object
+  models.Credentials:
+    properties:
+      password:
+        type: string
+      username:
+        type: string
+    type: object
   models.DataResponseOk:
     properties:
       code:
@@ -38,6 +45,13 @@ definitions:
         items:
           $ref: '#/definitions/models.User'
         type: array
+      message:
+        type: string
+    type: object
+  models.ResponseStatus:
+    properties:
+      code:
+        type: integer
       message:
         type: string
     type: object
@@ -79,6 +93,40 @@ info:
   title: Fiber Example API
   version: "1.0"
 paths:
+  /login:
+    post:
+      consumes:
+      - application/json
+      description: Login bro
+      parameters:
+      - description: The input todo struct
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/models.Credentials'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.DataResponseOk'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ResponseStatus'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/models.ResponseStatus'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ResponseStatus'
+      summary: Login User
+      tags:
+      - Login
   /user:
     get:
       consumes:
